--- a/conf/application.conf
+++ b/conf/application.conf
@@ -11,7 +11,9 @@ db {
 
 }
 
+//    allowedHttpHeaders = ["Accept","Accept-Language","Content-Type","Content-Language","*/*"]
 
+uploads_dir="D:/developm/internova(Pr)/internova_JAVA_security/uploads/"
 
 play.filters.enabled += "play.filters.cors.CORSFilter"
 play.filters {
@@ -22,7 +24,7 @@ play.filters {
 
 
     allowedHttpMethods = ["GET", "POST", "PUT", "CONNECT", "OPTIONS","DELETE"]
-    allowedHttpHeaders = ["Accept","Accept-Language","Content-Type","Content-Language"]
+    allowedHttpHeaders = null
     preflightMaxAge = 3 days
     hosts=["http://localhost:9000/getUsers"]
   }
