--- a/conf/application.conf
+++ b/conf/application.conf
@@ -13,9 +13,15 @@ db {
 
 //    allowedHttpHeaders = ["Accept","Accept-Language","Content-Type","Content-Language","*/*"]
 
-uploads_dir="D:/developm/internova(Pr)/internova_JAVA_security/uploads/"
 
-play.filters.enabled += "play.filters.cors.CORSFilter"
+
+#play.filters.enabled += "play.filters.cors.CORSFilter"
+
+play.filters {
+  # Disabled filters remove elements from the enabled list.
+  disabled += play.filters.csrf.CSRFFilter
+}
+
 play.filters {
 
   cors {
@@ -26,7 +32,7 @@ play.filters {
     allowedHttpMethods = ["GET", "POST", "PUT", "CONNECT", "OPTIONS","DELETE"]
     allowedHttpHeaders = null
     preflightMaxAge = 3 days
-    hosts=["http://localhost:9000/getUsers"]
+   allowed = ["."]
   }
 
   csrf {
@@ -41,12 +47,12 @@ play.filters {
 
   }
 }
-https.port: 9007
-play.server.https.keyStore {
-  path: "/path/to/keystore.jks"
-  type: "JKS"
-  password: "password_of_keystore"
+
+play.filters.hosts {
+  allowed = ["."]
 }
+
+
 
 
 # Point JPA at our database configuration
@@ -78,3 +84,6 @@ logger.play=INFO
 
 # Logger provided to your application:
 logger.application=DEBUG
+
+uploads_dir="D:/developm/internova(Pr)/internova_JAVA_security/uploads/"
+uploads_reports="D:/developm/internova(Pr)/internova_JAVA_security/app/"
