--- a/conf/application.conf
+++ b/conf/application.conf
@@ -27,7 +27,7 @@ play.filters {
     allowedHttpMethods = ["GET", "POST", "PUT", "CONNECT", "OPTIONS","DELETE"]
     allowedHttpHeaders = null
     preflightMaxAge = 3 days
-    hosts=["http://localhost:9000/getUsers"]
+   allowed = ["."]
   }
 
   csrf {
@@ -42,6 +42,12 @@ play.filters {
 
   }
 }
+
+
+play.filters.hosts {
+  allowed = ["."]
+}
+
 https.port: 9007
 play.server.https.keyStore {
   path: "/path/to/keystore.jks"
