--- a/conf/application.conf
+++ b/conf/application.conf
@@ -11,18 +11,26 @@ db {
 
 }
 
-//    allowedHttpHeaders = ["Accept","Accept-Language","Content-Type","Content-Language","*/*"]
+allowedHttpHeaders = ["Accept","Accept-Language","Content-Type","Content-Language","*/*"]
 
 uploads_dir="D:/developm/internova(Pr)/internova_JAVA_security/uploads/"
 uploads_reports="D:/developm/internova(Pr)/internova_JAVA_security/app/reports/"
 
 play.filters.enabled += "play.filters.cors.CORSFilter"
+
+play.filters {
+
+
+  # Disabled filters remove elements from the enabled list.
+  disabled += play.filters.csrf.CSRFFilter
+}
+
+
+
 play.filters {
 
   cors {
-    pathPrefixes = ["/"]
-    allowedOrigins = null
-
+    pathPrefixes = ["/"],
 
     allowedHttpMethods = ["GET", "POST", "PUT", "CONNECT", "OPTIONS","DELETE"]
     allowedHttpHeaders = null
@@ -42,6 +50,7 @@ play.filters {
 
   }
 }
+play.filters.cors.allowedOrigins = null
 
 
 play.filters.hosts {
