customers suppliers cities trucks typesv7

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -15,6 +15,7 @@ allowedHttpHeaders = ["Accept","Accept-Language","Content-Type","Content-Languag
 
 uploads_dir="D:/developm/internova(Pr)/internova_JAVA_security/uploads/"
 uploads_reports="D:/developm/internova(Pr)/internova_JAVA_security/app/reports/"
+ws_url="http://localhost:9000/"
 
 play.filters.enabled += "play.filters.cors.CORSFilter"
 
