--- a/conf/application.conf
+++ b/conf/application.conf
@@ -96,7 +96,12 @@ logger.play=INFO
 # Logger provided to your application:
 logger.application=DEBUG
 
+play.http.parser.maxDiskBuffer = 800MB
 
+parsers.anyContent.maxLength = 800MB
+
+
+play.http.parser.maxMemoryBuffer=14MB
 
 play.mailer {
   host = "smtp-relay.sendinblue.com"
