word mpamph 27may

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,21 +1,27 @@
 
-db {
-    default.driver=com.mysql.jdbc.Driver
-    default.url="jdbc:mysql://localhost:3306/internova_db?characterEncoding=UTF-8"
-    default.user=root
-    default.logStatements=true
-    default.jndiName=DefaultDS
-    default.maximumPoolSize=30
-    default.connectionTestQuery="SELECT 1 FROM DUAL"
-    default.idleConnectionTestPeriod=2 minutes
+    db.default.driver=com.mysql.jdbc.Driver
+    db.default.url="jdbc:mysql://localhost:3306/internova_db?characterEncoding=UTF-8"
+    db.default.user=root
+    db.default.password=""
+    db.default.logStatements=true
+    db.default.jndiName=DefaultDS
+    db.default.maximumPoolSize=30
+    db.default.connectionTestQuery="SELECT 1 FROM DUAL"
+    db.default.idleConnectionTestPeriod=2 minutes
 
-}
+
 
 allowedHttpHeaders = ["Accept","Accept-Language","Content-Type","Content-Language","*/*"]
 
 uploads_dir="D:/developm/internova(Pr)/internova_JAVA_security/uploads/"
 uploads_reports="D:/developm/internova(Pr)/internova_JAVA_security/app/reports/"
-ws_url="http://localhost:9001/"
+jasper_reports="D:/developm/internova(Pr)/internova_JAVA_security/app/reports/jasper/"
+jasper_reports_generates="D:/developm/internova(Pr)/internova_JAVA_security/app/reports/jasper_generates/"
+ws_url="http://localhost:9000/"
+
+report_path = "./app/reports/"
+
+
 
 play.filters.enabled += "play.filters.cors.CORSFilter"
 
